[package]
name = "cast2gif"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cli = ["anyhow", "better-panic", "clap", "colored", "env_logger"]

[dependencies]
log = "0.4.0"
vt100 = "0.8.1"
resvg = "0.9.0"
svg = "0.7.1"
gifski = "0.10.0"
clap = { version = "2.33.0", optional = true }
anyhow = { version = "1.0.26", optional = true }
better-panic = { version = "0.2.0", optional = true }
env_logger = { version = "0.7.1", optional = true }
colored = { version = "1.9.3", optional = true }
