[package]
name = "cast2gif"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli", "backend-fontkit"]
cli = ["anyhow", "better-panic", "clap", "colored", "indicatif", "env_logger"]
backend-fontkit = ["font-kit", "pathfinder_geometry", "palette"]
backend-svg = ["resvg"]
flamegraph = ["flame"]

[dependencies]
log = "0.4.0"
vt100 = "0.8.1"
resvg = { version = "0.9.0", features = ["raqote-backend"], optional = true }
svg = "0.7.1"
gifski = "0.10.0"
clap = { version = "2.33.0", features = ["wrap_help"], optional = true }
anyhow = { version = "1.0.26", optional = true }
better-panic = { version = "0.2.0", optional = true }
env_logger = { version = "0.7.1", optional = true }
colored = { version = "1.9.3", optional = true }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
thiserror = "1.0.11"
rayon = "1.3.0"
lazy_static = "1.4.0"
base16 = "0.2.1"
ansi_colours = "1.0.1"
indicatif = { version = "0.14.0", optional = true }
imgref = "1.4.0"
rgb = "0.8.16"
flume = "0.5.1"
font-kit = { version = "0.6", features=["loader-freetype"], optional = true }
pathfinder_geometry = { version = "0.5.1", optional = true }
palette = { version = "0.5.0", optional = true }
flame = { version = "0.2.2", optional = true }
